@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1866 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added property to Castor's Ant task to allow configuration of 'nameConflictStrategy'.
+       Details: http://jira.codehaus.org/browse/CASTOR-1866
+       (Werner - 20070217)
+
 XML:   Resolved issue CASTOR-1865 using contribution from Guy Coleman [guy.coleman@prolog.uk.com]
        Fixed problem with 'required' attributes in the context of containers.
        Details: http://jira.codehaus.org/browse/CASTOR-1865
